testcases/error/invalid_unsized_literal.veryl
module invalid_unsized_literal {
    let _a: logic<8> = {'1, 4'b0};
}
